--- a/style.css
+++ b/style.css
@@ -1,54 +1,109 @@
-body
+.container-page
 {
-    margin:50px 0px;
-    padding:0px;
-    text-align:center;
+    display: grid;
+    grid-template-columns: [page-col-first] auto [page-col-content-start] 512px [page-col-content-end] auto [page-col-last];
+    grid-template-rows: auto auto auto auto;
+    align-items: stretch;
+    justify-items: stretch;
+    grid-column-gap: 2px;
+    grid-row-gap: 2px;
 }
 
-#Content
+.item-page
 {
-    width:500px;
-    margin:0px auto;
-    text-align:left;
+    grid-column: page-col-first / page-col-last;
+    grid-row: auto / span 1;
+    align-self: center;
+    justify-self: center;
 }
 
-#Centered
+.item-page-content
 {
-    width:500px;
-    margin:0px auto;
-    text-align:center;
+    grid-column: page-col-content-start / page-col-content-end;
+    grid-row: auto / span 1;
+    align-self: center;
+    justify-self: center;
 }
 
-#TrueCentered
+.container-header
 {
-    margin:0px auto;
-    text-align:center;
+    display: grid;
+    grid-template-columns: [header-col-first] auto [header-col-last];
+    grid-template-rows: auto auto;
+    align-items: stretch;
+    justify-items: stretch;
+    grid-column-gap: 2px;
+    grid-row-gap: 2px;
 }
 
-p.centered
+.item-header
 {
-    text-align:center;
-    margin-top:0px;
-    margin-bottom:0px;
-    padding:0px;
+    grid-column: header-col-first / header-col-last;
+    grid-row: auto / span 1;
+    align-self: center;
+    justify-self: center;
+}
+
+.container-nav
+{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: [nav-row-first] auto [nav-row-last];
+    align-items: stretch;
+    justify-items: stretch;
+    grid-column-gap: 32px;
+    grid-row-gap: 2px;
+}
+
+.item-nav
+{
+    grid-column: auto / span 1;
+    grid-row: nav-row-first / nav-row-last;
+    align-self: center;
+    justify-self: center;
+}
+
+.centered
+{
+    text-align: center;
+}
+
+p
+{
+    text-align: left;
 }
 
 a
-{text-decoration:none}
+{
+    text-decoration: none;
+}
+
+a.nav
+{
+    text-decoration: underline;
+}
 
 a:link
-{color:#484BA9}
+{
+    color: #484BA9;
+}
 
 a:visited
-{color:#484BA9}
+{
+    color: #484BA9;
+}
 
 a:active
-{color:#DBDCFE}
+{
+    color: #DBDCFE;
+}
 
 a:hover
-{color:#0000ff}
+{
+    color: #0000ff;
+}
 
 img.customBorder
 {
-    border:3px black solid
+    border: 3px black solid;
 }
