--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,12 @@
 <header>
-    <div id="Centered">
-        <h1>{{ site.title }}</h1>
-    </div>
-    <p class="centered">
-        <img src="/images/eye_banner.jpg" alt="Welcome!">
-    </p>
-    <div id="Centered">
-        {% include nav.html %}
+    <div class="container-header">
+        <div class="item-header">
+            <h1 class="centered">{{ site.title }}</h1>
+        </div>
+        <div class="item-header">
+            <p class="centered">
+                <img src="/images/eye_banner.jpg" alt="Welcome!">
+            </p>
+        </div>
     </div>
 </header>
