--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,14 +21,32 @@
         {%- assign gamesTitle = item.title -%}
     {%- endif -%}
 {%- endfor -%}
-<p>
-    <a href = "{{ homePageStrictDir }}">{{ homeTitle }}</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }}</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "{{ gamesPageStrictDir }}">{{ gamesTitle }}</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a>
-</p>
+<nav>
+    <div class="container-nav">
+        <div class="item-nav">
+            <p class="centered">
+                <a class="nav" href = "{{ homePageStrictDir }}">{{ homeTitle }}</a>
+            </p>
+        </div>
+        <div class="item-nav">
+            <p class="centered">
+                <a class="nav" href = "{{ aboutMePageStrictDir }}">{{ aboutMeTitle }}</a>
+            </p>
+        </div>
+        <div class="item-nav">
+            <p class="centered">
+                <a class="nav" href = "{{ gamesPageStrictDir }}">{{ gamesTitle }}</a>
+            </p>
+        </div>
+        <div class="item-nav">
+            <p class="centered">
+                <a class="nav" href= "{{ site.linkedInUrl }}">R&eacute;sum&eacute;</a>
+            </p>
+        </div>
+        <div class="item-nav">
+            <p class="centered">
+                <a class="nav" href = "mailto:{{ site.email }}?subject=jplc.ca%20Site%20Visit">Contact</a>
+            </p>
+        </div>
+    </div>
+</nav>
