--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,18 +2,23 @@
 <html>
     {% include head.html -%}
     <body>
-        {% include header.html -%}
-        <section>
-            <div id="TrueCentered">
-                <h2>{{ page.title }}</h2>
+        <div class="container-page">
+            <div class="item-page">
+                {% include header.html -%}
             </div>
-            <div id="Content">
-                {{ content }}
+            <div class="item-page">
+                {% include nav.html -%}
             </div>
-        </section>
-        <div id="Centered">
-            <p>~</p>
-            {% include footer.html -%}
+            <div class="item-page-content">
+                <section>
+                    <h2 class="centered">{{ page.title }}</h2>
+                    {{ content }}
+                </section>
+            </div>
+            <div class="item-page">
+                <p class="centered">~</p>
+                {% include footer.html -%}
+            </div>
         </div>
     </body>
 </html>
