--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         </div>
         <div class="item-header">
             <p class="centered">
-                <img class="banner" src="/images/eye_banner.jpg" alt="Welcome!">
+                <img class="banner" src="/images/eye_banner.jpg" alt="Website banner" title="Welcome!">
             </p>
         </div>
     </div>
