--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -1,3 +1,4 @@
+{% if page.unityFilePath %}
 <script type="text/javascript">
     <!--
     var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
@@ -9,6 +10,7 @@
 <script type="text/javascript">
     <!--
     var u = new UnityObject2();
-    u.initPlugin(jQuery("#unityPlayer")[0], "/unity/TestGame_BasicCharControl_v1_0/TestGame_BasicCharControl_v1_0.unity3d");
+    u.initPlugin(jQuery("#unityPlayer")[0], "{{ page.unityFilePath }}");
     -->
 </script>
+{% endif %}
