--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
     <title>{{ site.title }} | {{ page.title }}</title>
     {% include analytics.html -%}
     {% include unity.html -%}
-    {%- include favicon.html -%}
+    {% include favicon.html -%}
     <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
 </head>
