--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -1,9 +1,14 @@
 {%- if page.unityFilePath -%}
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript">
     <!--
+    // Using local version of UnityObject2.js since "https://ssl-webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js" version is already gone and "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js" version might disappear in the future.
+    var unityObjectUrl = "/unity/UnityObject2.js";
+    /*
     var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
     if (document.location.protocol == 'https:')
         unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
+    */
     document.write('<script type="text/javascript" src="' + unityObjectUrl + '"></script>');
     -->
 </script>
