--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -4,8 +4,8 @@
     <script type="text/javascript">
         <!--
         var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
-        //if (document.location.protocol == 'https:')
-        //    unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
+        if (document.location.protocol == 'https:')
+            unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
         document.write('<script type="text\/javascript" src="' + unityObjectUrl + '"><\/script>');
         -->
     </script>
