--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
     {% include analytics.html -%}
     {% include favicon.html -%}
     <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
-    {% include unity.html -%}
+    {% include unity.html %}
 </head>
