--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -8,7 +8,7 @@
         if (document.location.protocol == 'https:')
             unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
         */
-        var unityObjectUrl = "/unity/UnityObject2.js";
+        var unityObjectUrl = "/unity/UnityObject2_custom/UnityObject2.js";
         document.write('<script type="text\/javascript" src="' + unityObjectUrl + '"><\/script>');
         -->
     </script>
