--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -31,7 +31,7 @@
                     $missingScreen.find("a").click(function (e) {
                         e.stopPropagation();
                         e.preventDefault();
-                        u.installPlugin();
+                        //u.installPlugin();
                         return false;
                     });
                     $missingScreen.show();
