--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -14,10 +14,14 @@
         -->
     </script>
         <script type="text/javascript">
+        /*
         var config = {
         baseDownloadUrl: "http://webplayer.unity3d.com/download_webplayer-3.x/"
         };
         var u = new UnityObject2(config);
+        */
+        var u = new UnityObject2();
+        /*
         u.observeProgress(function (progress) {
             var $missingScreen = jQuery(progress.targetEl).find(".missing");
             switch(progress.pluginStatus) {
@@ -43,6 +47,7 @@
                 break;
             }
         });
+        */
         jQuery(function(){
             u.initPlugin(jQuery("#unityPlayer")[0], "{{ page.unityFilePath }}");
         });
