--- a/_includes/unity.html
+++ b/_includes/unity.html
@@ -1,55 +1,48 @@
 {%- if page.unityFilePath -%}
-<!-- Unity code found at: https://docs.unity3d.com/530/Documentation/Manual/WorkingwithUnityObject.html -->
-<!-- Unity code for config found at: https://github.com/unity3d-jp/inter-high-webplayer-templates/blob/master/Assets/WebPlayerTemplates/InterHighTemplate/index.html -->
+<!-- Unity JavaScript code found at: https://docs.unity3d.com/530/Documentation/Manual/WorkingwithUnityObject.html -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        <!--
-        /*
-        var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
-        if (document.location.protocol == 'https:')
-            unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
-        */
-        var unityObjectUrl = "/unity/UnityObject2_custom/UnityObject2.js";
-        document.write('<script type="text\/javascript" src="' + unityObjectUrl + '"><\/script>');
-        -->
-    </script>
-        <script type="text/javascript">
-        /*
-        var config = {
-        baseDownloadUrl: "http://webplayer.unity3d.com/download_webplayer-3.x/"
-        };
-        var u = new UnityObject2(config);
-        */
-        var u = new UnityObject2();
-        /*
-        u.observeProgress(function (progress) {
-            var $missingScreen = jQuery(progress.targetEl).find(".missing");
-            switch(progress.pluginStatus) {
-                case "unsupported":
-                    showUnsupported();
-                break;
-                case "broken":
-                    alert("You will need to restart your browser after installation.");
-                break;
-                case "missing":
-                    $missingScreen.find("a").click(function (e) {
-                        e.stopPropagation();
-                        e.preventDefault();
-                        //u.installPlugin();
-                        return false;
-                    });
-                    $missingScreen.show();
-                break;
-                case "installed":
-                    $missingScreen.remove();
-                break;
-                case "first":
-                break;
-            }
-        });
-        */
-        jQuery(function(){
-            u.initPlugin(jQuery("#unityPlayer")[0], "{{ page.unityFilePath }}");
-        });
-        </script>
+<script type="text/javascript">
+    <!--
+    /*
+    var unityObjectUrl = "http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js";
+    if (document.location.protocol == 'https:')
+        unityObjectUrl = unityObjectUrl.replace("http://", "https://ssl-");
+    */
+    // Using a jplc.ca copy of UnityObject2.js (date copied: 2019-04-16(Tu)) since the Unity website version
+    // might be removed one day due to the Unity Web Player no longer being officially supported by Unity.
+    var unityObjectUrl = "/unity/UnityObject2.js";
+    document.write('<script type="text\/javascript" src="' + unityObjectUrl + '"><\/script>');
+    -->
+</script>
+<script type="text/javascript">
+    var u = new UnityObject2();
+    u.observeProgress(function (progress) {
+        var $missingScreen = jQuery(progress.targetEl).find(".missing");
+        switch(progress.pluginStatus) {
+            case "unsupported":
+                showUnsupported();
+            break;
+            case "broken":
+                alert("You will need to restart your browser after installation.");
+            break;
+            case "missing":
+                $missingScreen.find("a").click(function (e) {
+                    e.stopPropagation();
+                    e.preventDefault();
+                    u.installPlugin();
+                    return false;
+                });
+                $missingScreen.show();
+            break;
+            case "installed":
+                $missingScreen.remove();
+            break;
+            case "first":
+            break;
+        }
+    });
+    jQuery(function(){
+        u.initPlugin(jQuery("#unityPlayer")[0], "{{ page.unityFilePath }}");
+    });
+</script>
 {%- endif -%}
