--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,5 @@
     {% include favicon.html -%}
     <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
     {% include unity.html %}
+    <link rel="me" href="https://mastodon.social/@JPLC">
 </head>
