Update head.html with IndieLogin.com support
Added support for IndieLogin.com (IndieAuth).

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
     <link rel="stylesheet" type="text/css" href="/style.css" media="screen">
     {% include unity.html %}
     <link rel="me" href="https://mastodon.social/@JPLC">
+    <link rel="me authn" href="mailto:joseph.cassano@jplc.ca">
 </head>
