Update head.html to add support for Webmention.io
Added support for Webmention.io

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
     {% include unity.html %}
     <link rel="me" href="https://mastodon.social/@JPLC">
     <link rel="me authn" href="mailto:joseph.cassano@jplc.ca">
+    <link rel="webmention" href="https://webmention.io/www.jplc.ca/webmention">
 </head>
